--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.3",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "bootstrap": "^4.5.3",
+    "md5": "^2.3.0",
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
